--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@ node_modules
 dist
 dist-ssr
 *.local
-
+# local env files
+.env*.local
+.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,4 +24,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
+
